2016-03-28  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Xfer.pl: Validate CRC and part size

2016-03-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS: Add new amadmin command and amtape inventory result

2016-03-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Rest/Labels.pm: Add the RentetionType in result
	* perl/Amanda/Rest/Storages.pm: Add the RentetionType in result
	* installcheck/Amanda_Rest_Labels.pl,
	  installcheck/Amanda_Rest_Storages.pl: Fix for new result

2016-03-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amtape.pl: Add the RetentionType in the inventory result

2016-03-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amadmin.c: Add retention command
	* server-src/amadmin_perl.pl: Implement retention command
	* man/xml-source/amadmin.8.xml: Document retention command

2016-03-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Taper/Worker.pm: Typo

2016-03-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/tapefile.h (tape_t): Add the RetentionType
	* server-src/tapefile.c: Comupte the RetentionType
	* perl/Amanda/Tapelist.swg: Swig the RetentionType

2016-03-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Taper/Worker.pm (scribe_notif_new_tape): Check for no
	  error

2016-03-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/vfs-device.c: Return some error instead of just logging a
	  warning

2016-03-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* xfer-src/element-glue.c (do_directtcp_accept): Increase timeout to
	  840

2016-03-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	Add RESTORE command in the cmdfile
	* man/xml-source/amfetchdump.8.xml: Document new --reserve-tapes and
	  --release-tapes options
	* perl/Amanda/Cmdfile.swg: Add CMD_RESTORE
	* perl/Amanda/DB/Catalog.pm: Get the pool fromthe find result
	* perl/Amanda/FetchDump.pm: Add release-tapes and reserve-tapes